# swayambhu

./: .gitignore  CLAUDE.md  DHARMA.md  Dockerfile  LICENSE  README.md  brainstem-dev.js  brainstem.js  core_agent_lines.sh  hook-chat.js  hook-main.js  hook-protect.js  hook-reflect.js  package-lock.json  package.json  prompt-deep.md  prompt-reflect.md  pyproject.toml  seed-config.md  vitest.config.js  wake-hook.js  wrangler.dev.toml  wrangler.toml
.devcontainer/: devcontainer.json  setup.sh
__mocks__/: cloudflare-workers.js
channels/: slack.js
dashboard-api/: worker.js  wrangler.toml
docs/: DEVELOPMENT.md  INFRA_MIGRATION.md  TESTING.md  brainstem.md  doc-architecture.md  doc-mutation-guide.md  mutation-protocol-proposal.md  recursive-reflection-proposal.md  why_sadhguru.md
prompts/: deep-reflect.md  orient.md  reflect.md
providers/: llm.js  llm_balance.js  wallet_balance.js
scripts/: check-reflect.mjs  clip.ps1  dev-serve.mjs  dev-start.sh  dump-sessions.mjs  patch-kv.mjs  read-kv.mjs  reset-wake-timer.mjs  rollback-session.mjs  seed-local-kv.mjs  seed-local-kv.sh  switch-model.sh  wake-now.sh
site/: index.html
swayambhu/: __init__.py  __main__.py  gateway_lock.py
tests/: brainstem.test.js  chat.test.js  test_cli_input.py  test_docker.sh  test_email_channel.py  test_engine.py  test_tool_validation.py  tools.test.js  wake-hook.test.js
tools/: check_or_balance.js  check_wallet_balance.js  kv_manifest.js  kv_read.js  kv_write.js  send_slack.js  send_telegram.js  topup_openrouter.js  web_fetch.js
workspace/: .gitignore  AGENTS.md  BOOTSTRAP.md  ENVIRONMENT.md  JOURNAL.md  NOTEBOOK.md  ORIGIN.md  RESOURCES.md  SCRATCH.md  SMRITI.md  SOUL.md  SRUTI.md  inner-engineering.txt  origin.pub  (+2 more)
(+76 files in other folders)
